tests/errors/BadPragma0.hs
{-@ LIQUID "--idirs=.." @-}

module BadPragma0 where

i :: Int
i = 1

